<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/autoloan"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_2" >

    <TextView
        android:id="@+id/auto_loan_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:text="@string/auto_amount"
        android:textColor="@color/blue3"
        android:textSize="22sp" >

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/auto_loan_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_loan_txt"
        android:layout_toRightOf="@+id/auto_loan_txt"
        android:layout_marginLeft="20dp"
        android:text="@string/dollar_sign"
        android:textColor="@color/blue3"
        android:textSize="25sp" >
    </TextView>

    <EditText
        android:id="@+id/auto_loan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/auto_loan_txt"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/auto_loan_sign"
        android:background="@drawable/textfield1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/auto_putdown_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_loan_txt"
        android:layout_below="@+id/auto_loan"
        android:layout_marginTop="20dp"
        android:text="@string/auto_putdown_txt"
        android:textColor="@color/blue3"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/auto_putdown_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_putdown"
        android:layout_alignLeft="@+id/auto_loan_sign"
        android:text="@string/dollar_sign"
        android:textColor="@color/blue3"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/auto_putdown"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/auto_putdown_txt"
        android:layout_alignLeft="@+id/auto_loan"
        android:layout_alignRight="@+id/auto_loan"
        android:background="@drawable/textfield1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:text="@string/auto_putdown"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/auto_tradein_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_loan_txt"
        android:layout_below="@+id/auto_putdown"
        android:layout_marginTop="20dp"
        android:text="@string/auto_trade_txt"
        android:textColor="@color/blue3"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/auto_tradein_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_tradein_txt"
        android:layout_alignLeft="@+id/auto_putdown_sign"
        android:text="@string/dollar_sign"
        android:textColor="@color/blue3"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/auto_tradein"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/auto_tradein_sign"
        android:layout_alignLeft="@+id/auto_putdown"
        android:layout_alignRight="@+id/auto_putdown"
        android:background="@drawable/textfield1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:text="@string/auto_putdown"
        android:textColor="@color/black"
        android:textSize="22sp" >
    </EditText>

    <TextView
        android:id="@+id/auto_rate_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_loan_txt"
        android:layout_below="@+id/auto_tradein_txt"
        android:layout_marginTop="20dp"
        android:text="@string/auto_rate_txt"
        android:textColor="@color/blue3"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/auto_rate"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/auto_rate_txt"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/auto_rate_txt"
        android:background="@drawable/textfield1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:text="@string/auto_rate"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/auto_tax_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_rate"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/auto_tax"
        android:text="@string/auto_tax_txt"
        android:textColor="@color/blue3"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/auto_duration_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_rate_txt"
        android:layout_below="@+id/auto_rate_txt"
        android:layout_marginTop="20dp"
        android:text="@string/auto_duration_txt"
        android:textColor="@color/blue3"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/auto_duration"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/auto_duration_txt"
        android:layout_alignRight="@+id/auto_rate"
        android:background="@drawable/textfield1"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:selectAllOnFocus="true"
        android:text="@string/auto_duration"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/auto_duration_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/auto_duration"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/auto_duration"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/auto_year"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/auto_year"
            android:textColor="@color/blue3"
            android:textSize="21sp" />

        <RadioButton
            android:id="@+id/auto_month_radio"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_month"
            android:textColor="@color/blue3"
            android:textSize="21sp" />
    </RadioGroup>

    <Button
        android:id="@+id/auto_calc"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/auto_duration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/submit_button"
        android:text="@string/submit_button"
        android:textColor="@color/green3"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/auto_total_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_duration_txt"
        android:layout_below="@+id/auto_calc"
        android:layout_marginTop="20dp"
        android:text="@string/auto_interest_txt"
        android:textColor="@color/green4"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/auto_total_interest_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_total_interest"
        android:layout_alignLeft="@+id/auto_loan_sign"
        android:text="@string/dollar_sign"
        android:textColor="@color/green4"
        android:textSize="25sp" >
    </TextView>
	<!-- 
    <EditText
        android:id="@+id/auto_interest"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/auto_total_interest"
        android:layout_alignLeft="@+id/auto_loan"
        android:layout_alignRight="@+id/auto_loan"
        android:background="@drawable/textfield1"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:selectAllOnFocus="true"
        android:text="@string/auto_putdown"
        android:textColor="@color/black"
        android:textSize="25sp" >
    </EditText>
 	-->
 	<TextView
        android:id="@+id/auto_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_loan"
        android:layout_alignBottom="@+id/auto_total_interest"
        android:text="@string/auto_trade"
        android:textColor="@color/green4"
        android:textSize="26sp" >
    </TextView>
    
    <TextView
        android:id="@+id/auto_total_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_duration_txt"
        android:layout_below="@+id/auto_total_interest"
        android:layout_marginTop="14dp"
        android:text="@string/auto_total_txt"
        android:textColor="@color/green4"
        android:textSize="25sp" >
    </TextView>

    <TextView
        android:id="@+id/auto_total_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_total_payment"
        android:layout_alignLeft="@+id/auto_loan_sign"
        android:text="@string/dollar_sign"
        android:textColor="@color/green4"
        android:textSize="25sp" >
    </TextView>
	<!--  
    <EditText
        android:id="@+id/auto_total"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/auto_total_payment"
        android:layout_alignLeft="@+id/auto_loan"
        android:layout_alignRight="@+id/auto_loan"
        android:background="@drawable/textfield1"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:selectAllOnFocus="true"
        android:text="@string/auto_putdown"
        android:textColor="@color/black"
        android:textSize="25sp" >
    </EditText>
	-->
	<TextView
        android:id="@+id/auto_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_total_payment"
        android:layout_alignLeft="@+id/auto_loan"
        android:text="@string/auto_putdown"
        android:textColor="@color/green4"
        android:textSize="26sp" >
    </TextView>
    
    <TextView
        android:id="@+id/auto_monthly_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_duration_txt"
        android:layout_below="@+id/auto_total_payment"
        android:layout_marginTop="14dp"
        android:text="@string/auto_monthly_txt"
        android:textColor="@color/orange3"
        android:textSize="25sp" >
    </TextView>

    <TextView
        android:id="@+id/auto_monthly_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_monthly_payment"
        android:layout_alignLeft="@+id/auto_loan_sign"
        android:text="@string/dollar_sign"
        android:textColor="@color/orange3"
        android:textSize="25sp" >
    </TextView>
	<!--  
    <EditText
        android:id="@+id/auto_monthly"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/auto_monthly_payment"
        android:layout_alignLeft="@+id/auto_loan"
        android:layout_alignRight="@+id/auto_loan"
        android:background="@drawable/textfield1"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:selectAllOnFocus="true"
        android:text="@string/auto_putdown"
        android:textColor="@color/black"
        android:textSize="25sp" >
    </EditText>
	-->
	<TextView
        android:id="@+id/auto_monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/auto_monthly_payment"
        android:layout_alignLeft="@+id/auto_loan"
        android:text="@string/auto_putdown"
        android:textColor="@color/orange3"
        android:textSize="26sp" >
    </TextView>
    
    <EditText
        android:id="@+id/auto_tax"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/auto_loan"
        android:layout_alignBottom="@+id/auto_tax_txt"
        android:background="@drawable/textfield1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:text="@string/auto_tax"
        android:textColor="@color/black"
        android:textSize="25sp" />

</RelativeLayout>